--- a/12bool.css
+++ b/12bool.css
@@ -54,11 +54,11 @@
 }
 
 .col-xs-11 {
-    width: calc((100% / 12)* 11);
+    width: calc((100% / 12) * 11);
 }
 
 .col-xs-12 {
-    width: calc((100% / 12) * 12);
+    width: 100%;
 }
 
 .col-xs-offset-0 {
@@ -109,10 +109,11 @@
     margin-left: calc((100% / 12) * 11);
 }
 
-@media screen (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .col-md-1 {
         width: calc(100% / 12);
     }
+
     .col-md-2 {
         width: calc((100% / 12) * 2);
     }
@@ -150,11 +151,11 @@
     }
 
     .col-md-11 {
-        width: calc((100% / 12)* 11);
+        width: calc((100% / 12) * 11);
     }
 
     .col-md-12 {
-        width: calc((100% / 12) * 12);
+        width: 100%;
     }
 
     .col-md-offset-0 {
@@ -206,10 +207,11 @@
     }
 }
 
-@media screen (min-width: 992px) {
+@media screen and (min-width: 992px) {
     .col-lg-1 {
         width: calc(100% / 12);
     }
+
     .col-lg-2 {
         width: calc((100% / 12) * 2);
     }
@@ -247,11 +249,11 @@
     }
 
     .col-lg-11 {
-        width: calc((100% / 12)* 11);
+        width: calc((100% / 12) * 11);
     }
 
     .col-lg-12 {
-        width: calc((100% / 12) * 12);
+        width: 100%;
     }
 
     .col-lg-offset-0 {
