--- a/style.css
+++ b/style.css
@@ -1,18 +1,11 @@
-.row {
-  width: 992px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
-}
-
 /* BLOCCO LEZIONI */
-#lezioni .row>.left,
-#lezioni .row>.right {
+#lezioni .left,
+#lezioni .right {
   width: 50%;
   float: left;
 }
 
-#lezioni .row img {
+#lezioni img {
   /* per centrare orizzontalmente */
   display: block;
   margin-right: auto;
@@ -24,9 +17,9 @@
 }
 
 /* BLOCCO STEPS */
-#steps .row>.left,
-#steps .row>.central,
-#steps .row>.right {
+#steps .left,
+#steps .central,
+#steps .right {
   float: left;
   width: 33%;
 }
@@ -40,21 +33,21 @@
   text-align: center;
 }
 
-#why .row>.first,
-#why .row>.second,
-#why .row>.third {
+#why .first,
+#why .second,
+#why .third {
   width: 100%;
   margin-top: 80px;
 }
 
-#why .row img {
+#why .container img {
   background-color: #428bca;
   border-radius: 50%;
   padding: 30px
 }
 
 /* COMMON */
-.row::after {
+.container::after {
   content: '';
   display: table;
   clear: both;
